<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetpassword"
    android:orientation="vertical"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/forget"
          android:gravity="center"
          android:textColor="#ffffff"
          android:layout_marginTop="18dp"
          android:textSize="25dp"
          android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ftest"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:hint="E M A I L"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:layout_marginTop="100dp"
            android:textSize="15dp"
            android:inputType="textEmailAddress"/>

        <View
            android:id="@+id/email_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:background="#979797"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"/>

        <TextView
            android:id="@+id/email_error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FF0808"/>

        <Button
            android:id="@+id/send_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0808"
            android:text="SEND PASSWORD"
            android:textSize="15dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/Edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
